ref(architecture): change MVC to features.

--- a/src/Services/BackOffice.Sales/appsettings.json
+++ b/src/Services/BackOffice.Sales/appsettings.json
@@ -6,5 +6,26 @@
     "RabbitMqUri": "rabbitmq://localhost",
     "UserName": "guest",
     "Password": "guest"
+  },
+
+  "AzureAd": {
+    "Instance": "https://login.microsoftonline.com/",
+    "Domain": "myaadomain.onmicrosoft.com", // APP ID Uri
+    "TenantId": "00000000-0000-0000-0000-000000000000", // Endpoints
+    "ClientId": "00000000-0000-0000-0000-000000000000", // Application Id
+    "ClientSecret": "zCyiSm9NBAbbbuCOasLd/5Cv1G1aDKrGEQp1HN5WlQc=" // Key Passwords
+  },
+  "Logging": {
+    "IncludeScopes": true,
+    "Debug": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    },
+    "Console": {
+      "LogLevel": {
+        "Default": "Trace"
+      }
+    }
   }
 }
