--- a/src/Clients/backoffice-clientapp/package.json
+++ b/src/Clients/backoffice-clientapp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "react": "^16.4.0",
+    "react-adal": "^0.4.18",
     "react-dom": "^16.4.0",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
