--- a/src/Clients/backoffice-react/package.json
+++ b/src/Clients/backoffice-react/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backoffice-react",
   "version": "1.0.0",
-  "description": "npm init -y",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --config webpack.config.development.js",
