--- a/src/BuildingBlocks/BuildingBlock.Core/BuildingBlock.Core.csproj
+++ b/src/BuildingBlocks/BuildingBlock.Core/BuildingBlock.Core.csproj
@@ -1,5 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <ProjectGuid>{E2CEBBAF-6DF7-41E9-815D-9AD4CF90C844}</ProjectGuid>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 </Project>
