--- a/src/Services/BackOffice.Sales.Contracts/BackOffice.Sales.Contracts.csproj
+++ b/src/Services/BackOffice.Sales.Contracts/BackOffice.Sales.Contracts.csproj
@@ -1,6 +1,7 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <ProjectGuid>{E2CEBBAF-6DF7-41E9-815D-9AD4CF90C847}</ProjectGuid>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
