--- a/src/Services/BackOffice.Sales/BackOffice.Sales.csproj
+++ b/src/Services/BackOffice.Sales/BackOffice.Sales.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
+    <ProjectGuid>{E2CEBBAF-6DF7-41E9-815D-9AD4CF90C846}</ProjectGuid>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <UserSecretsId>d047e0ea-eb70-4f79-ad6f-eb5aa5786235</UserSecretsId>
   </PropertyGroup>
