--- a/src/Services/Backoffice.IntegrationTest/Backoffice.Sales.IntegrationTest.csproj
+++ b/src/Services/Backoffice.IntegrationTest/Backoffice.Sales.IntegrationTest.csproj
@@ -1,8 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <ProjectGuid>{E2CEBBAF-6DF7-41E9-815D-9AD4CF90C848}</ProjectGuid>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
