--- a/src/Services/Commerce.Catalogs/Commerce.Catalogs.csproj
+++ b/src/Services/Commerce.Catalogs/Commerce.Catalogs.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\BuildingBlocks\BuildingBlock.IntegrationEvent\BuildingBlock.IntegrationEventLog.csproj" />
-    <ProjectReference Include="..\BackOffice.Sales.Contracts\BackOffice.Sales.Contracts.csproj" />
+    <ProjectReference Include="..\..\Contracts\BackOffice.Sales.Contracts\BackOffice.Sales.Contracts.csproj" />
   </ItemGroup>
 
   <ItemGroup>
